# ocr-dimensions-extractor

./: .gitignore  4022.701.4430_grid_hybrid_extract.xlsx  README.md  README_DEPLOY.md  app.py  cad_grid_hybrid_extractor.py  packages.txt  pyproject.toml  render.yaml  requirements-paddle.txt  requirements.txt
.streamlit/: config.toml
cad_dimension_outputs/: 4022.708.2434_dimensions.xlsx  4022.708.8013_dimensions.xlsx  4022.708.8016_dimensions.xlsx  4022.713.0054_dimensions.xlsx
cad_dimensions/: __init__.py  api.py  backends.py  cli.py  crops.py  detectors.py  exclusions.py  export.py  geometry.py  grid.py  models.py  ocr.py  parser.py  pipeline.py  region_ocr.py  rendering.py  storage.py  templates.py  validation.py  vlm_verifiers.py
docs/: mlops_cad_dimension_pipeline.md
mlops/: pipeline.yaml
output/cad_dimension_outputs/: 4022.701.4430_dimensions.xlsx  4022.704.8585_dimensions.xlsx  4022.708.2491_dimensions.xlsx  4022.708.8663_dimensions.xlsx  4022.708.8749_dimensions.xlsx  4022.712.0059_dimensions.xlsx  4022.713.0100_dimensions.xlsx  4022.713.0132_dimensions.xlsx  accuracy_analysis.md  cad_dimension_batch_analysis.xlsx
tests/: test_artifacts.py  test_detector_crop_pipeline.py  test_golden_template.py  test_parser_validation.py  test_storage.py  test_vlm_verifier.py
tests/golden/: 4022.701.4430_expected.json
